# petstore

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
allure-report/: 00962f9b-0d30-45dd-8aff-2025caacf520-container.json  01bd5beb-a8c3-4db8-994b-60a2691793d0-container.json  01cec6a9-f87f-4b7e-b2db-733420a69247-container.json  01e97684-1b09-4a4c-a06c-917c27d193a9-result.json  01f565fb-5032-4ea0-82fd-98d7dbb517c7-container.json  02792ae7-4ac6-4a8d-bc73-637124cc7f03-container.json  037af784-a657-420c-b36a-0c36fae4447e-container.json  03fd4a44-052e-4485-8911-0e9e64dfd6b6-container.json  04129a98-7092-48d7-9925-2f1f584c6e1c-container.json  04218f17-1238-4268-a91a-caee13e89016-container.json  04af08de-0b1e-4ae7-8c2d-39d217a275fa-container.json  04b63a4e-2bd2-4679-9a2a-29c1b92942b9-container.json  051609e6-1e51-422c-8b5a-07f0ee040391-container.json  059c5152-2824-4802-81a9-8bceac1e51e4-container.json  05bb4bf2-e488-4b2a-9ada-bb5b6f6bd9b7-container.json  065c0c1d-416a-406d-bc10-f6c6f9354e89-container.json  06ce163c-1303-41c5-92d0-a862f8040f65-container.json  06f18617-ff26-439a-86a7-9092073058c1-container.json  089bcf34-fa45-4411-a0b7-0b436b064e53-result.json  09972f04-a25b-419c-88df-4dccaf1d067b-result.json  0a1649d1-c249-4a4a-815a-8e446884806b-result.json  0aac8010-3564-4caa-ab0e-8a26fe3918cf-result.json  0b2f51ca-9847-4336-88fc-b35222b725fc-container.json  0b3482e7-7b1c-4c6a-9c98-08d9c0e602d6-container.json  0b946052-483b-4ab5-b791-01eb01df111f-result.json  0bc437fd-21ca-4a59-98bf-f8838f74271d-container.json  0c293b19-f664-4607-b267-6a44fa62188f-container.json  (+513 more)
(+32 files in other folders)
